# cinema-scout

./: CONTEXT.md  Dockerfile  README.md  brain.py  check_models.py  ingest.py  pyproject.toml  requirements.txt
app/: api.py  brain.py  tools.py  ui.py
